--- a/src/pages/Map/components/TotalStatTable/index.module.css
+++ b/src/pages/Map/components/TotalStatTable/index.module.css
@@ -1,10 +1,5 @@
 @import '../../../../assets/styles/constants.css';
 
-.wrapper {
-  position: sticky;
-  left: 0;
-}
-
 .container {
   display: flex;
   height: 65px;
@@ -201,11 +196,11 @@
   .item:last-child {
     display: none;
   }
-
+  
   .statContainer.small {
     flex: none;
   }
-
+  
   .item:nth-last-child(2) {
     border-right: none;
   }
